# bran

./: .gitignore  Cargo.toml  bran.md  model.json
bran-frontend/: package-lock.json  package.json  webpack.config.js
bran-frontend/src/: App.jsx  index.js
bran-frontend/src/components/: ModelManagement.jsx  TestModel.jsx  TrainModel.jsx  TrainingStats.jsx
src/: activations.rs  layers.rs  lib.rs  loss.rs  main.rs  model.rs  optimizer.rs  prelude.rs  visualization.rs
