[package]
name = "bran"
version = "0.1.0"
edition = "2021"

[lib]
name = "bran"
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
rayon = "1.7.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bincode = "1.3"
plotlib = "0.5"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
